tests/mediawiki/fail/latest/includes/DefaultSettings.php
/** MediaWiki version number */
$wgVersion                      = '1.20.0';

